<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/containers"
    app:cardCornerRadius="15dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/bg"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp">

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:contentDescription="@string/recipe_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_desc" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>