<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_viewer_fragment"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:contentDescription="@string/recipe_pic"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:layout_margin="10dp"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/recipe_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <TextView
            android:id="@+id/recipe_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/recipe_desc"
            android:textAlignment="gravity"
            android:textSize="15sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/containers2"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/containers"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="2dp">

                    <ImageView
                        android:id="@+id/owner_picture"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/logo"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>


                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="@string/user"
                    android:textAlignment="gravity" />


                <ImageButton
                    android:id="@+id/recipe_favorite_btn"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/icon_favorite"
                    android:backgroundTint="@color/containers" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/containers"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipe_ingredients_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/containers"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/directions"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recipe_directions_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/comment"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0dp"
                android:layout_weight="1"
                android:hint="@string/new_comment"
                android:singleLine="true"
                android:textAlignment="gravity"
                app:backgroundTint="@color/button2" />

            <ImageButton
                android:id="@+id/addCommentBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/icon_add_circle" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recipe_coments_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"/>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>