<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_editor_fragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bars">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save_recipe_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/icon_save" />

                <Button
                    android:id="@+id/delete_recipe_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/icon_delete" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textAlignment="center"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/containers2"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/recipe_name"
                        android:singleLine="true"
                        android:textAlignment="gravity"
                        app:backgroundTint="@color/button2" />

                    <EditText
                        android:id="@+id/recipe_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:hint="@string/recipe_desc"
                        android:singleLine="true"
                        android:textAlignment="gravity"
                        app:backgroundTint="@color/button2" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/setRecipePicBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:layout_margin="25dp"
                            android:contentDescription="@string/new_recipe"
                            app:backgroundTint="@color/button"
                            app:srcCompat="@drawable/icon_camera" />

                        <ImageView
                            android:id="@+id/recipe_picture"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@color/white"
                            android:scaleType="centerCrop" />

                    </FrameLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/containers"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/visbility_private"
                        android:textAlignment="center"
                        android:textSize="20dp" />

                    <Switch
                        android:id="@+id/recipe_privacy_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/containers"
                        android:theme="@style/SwitchTheme"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/visbility_public"
                        android:textAlignment="center"
                        android:textSize="20dp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/containers"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ingredient"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="0dp"
                            android:layout_weight="1"
                            android:hint="@string/new_ingredient"
                            android:singleLine="true"
                            android:textAlignment="gravity"
                            app:backgroundTint="@color/button2" />

                        <ImageButton
                            android:id="@+id/addIngredientBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/icon_add_circle" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/ingredients_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textSize="25dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/containers"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/direction"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginHorizontal="0dp"
                            android:layout_weight="1"
                            android:hint="@string/new_direction"
                            android:singleLine="true"
                            android:textAlignment="gravity"
                            app:backgroundTint="@color/button2" />

                        <ImageButton
                            android:id="@+id/addDirectionBtn"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/icon_add_circle" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/directions_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="10dp" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>